# spop

./: .gitignore  README.md  conftest.py  pyproject.toml
githooks/: pre-commit
src/spop/: __init__.py
src/spop/symbol/: _test.py
src/spop/symbolic/: __init__.py  _base.py  _expr.py  _hys.py  _test_expr.py  conftest.py
