[project]
name = "spop"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
authors = [
    { name = "Movpasd", email = "54367524+movpasd@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.1.3",
]

[project.optional-dependencies]
highs = [
    "highspy>=1.8.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "hypothesis>=6.119.4",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
python_files = "_test*.py"